# carBaddie_frontend_SAA

./: .env  .gitignore  GEMINI.md  README.md  car_baddie.db  index.html  package-lock.json  package.json
scripts/: dev-all.js
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AppPreferencesProvider.tsx  BackendStatusProvider.tsx  DataManagementSection.tsx  DeleteVehicleSection.tsx  ErrorScreen.tsx  ExportSection.tsx  Footer.tsx  Header.tsx  Layout.tsx  LogCard.tsx  LogHistoryList.tsx  MaintenanceHeatmap.tsx  ModeToggle.tsx  RestoreSection.tsx  ShutdownOverlay.tsx  StartupScreen.tsx  ThemeProvider.tsx  VehicleCard.tsx  VehicleForm.tsx  VehicleServiceIntervalsManager.tsx  VehicleStatistics.tsx
src/hooks/: useUpcomingMaintenance.ts  useVehicleDefinitions.ts
src/lib/: utils.ts
src/pages/: AddEditServiceTypePage.tsx  AddMaintenanceLog.tsx  AddVehiclePage.tsx  EditVehiclePage.tsx  ManageServiceTypes.tsx  ServiceTypeLogHistoryPage.tsx  SettingsPage.tsx  VehicleDetailPage.tsx  VehicleList.tsx  VehicleMaintenancePage.tsx  VehicleSettingsPage.tsx
